--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
             <div class="menu">
                 <div class="toggle"><ion-icon name="add-outline" ></ion-icon></div>
                 <li style="--i:0">
-                  <a href="#home"><i class='bx bx-user-circle' ></i></a>
+                  <a href="#home"><img src="./boxicons-2.1.1/bx_user_circle_icon.png" style="height: 1rem ;"></a>
                 </li>
                 <li style="--i:1">
-                  <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+                  <a href="#"><img src="./boxicons-2.1.1/bx_cart_icon.png" style="height: 1rem ;"></a>
                 </li>
                 <li style="--i:2">
-                  <a href="#"><i class='bx bx-cart-alt'></i></a>
+                  <a href="#"><img src="./boxicons-2.1.1/bxl_whatsapp_square_icon.png" style="height: 1rem ;"></a>                  
                 </li>
                 <li style="--i:3">
-                  <a href="#"><i class='bx bx-mail-send' ></i></a>
+                  <a href="#"><img src="./boxicons-2.1.1/bx_mail_send_icon.png" style="height: 1rem ;"></a>
                 </li>
                 <li style="--i:4">
-                  <a href="#"><i class='bx bx-map-pin' ></i></a>
+                  <a href="#"><img src="./boxicons-2.1.1/bx_map_pin_icon.png" style="height: 1rem ;"></a>
                 </li>
               </div>
               <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
